samples/_failures_safe/1761467226_029faf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_443c78aa.c: In function ‘main’:
./samples/SAFE/__tmp_443c78aa.c:173:16: error: missing terminating " character
  173 |         printf("No
      |                ^~~
./samples/SAFE/__tmp_443c78aa.c:173:9: error: expected expression at end of input
  173 |         printf("No
      |         ^~~~~~
./samples/SAFE/__tmp_443c78aa.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_443c78aa.c:173:9: error: expected declaration or statement at end of input
